src/mobile/build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE

> Task :app:processDebugMainManifest
package="com.ciphermesh.mobile" found in source AndroidManifest.xml: /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/AndroidManifest.xml.
Setting the namespace via the package attribute in the source AndroidManifest.xml is no longer supported, and the value is ignored.
Recommendation: remove package="com.ciphermesh.mobile" from the source AndroidManifest.xml: /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/AndroidManifest.xml.

> Task :app:processDebugManifest
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:configureCMakeDebug[arm64-v8a]

> Task :app:buildCMakeDebug[arm64-v8a] FAILED
C/C++: ninja: Entering directory `/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a'
C/C++: /home/amogh/Android/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android24 --sysroot=/home/amogh/Android/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DRTC_ENABLE_MEDIA=0 -DRTC_ENABLE_WEBSOCKET=1 -DRTC_STATIC -Dciphermesh_jni_EXPORTS -I/home/amogh/Projects/CipherMesh/src/core -I/home/amogh/Projects/CipherMesh/src/p2p -I/home/amogh/Projects/CipherMesh/src/p2p_webrtc -I/home/amogh/Projects/CipherMesh/src/utils -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/sodium-src/libsodium/src/libsodium/include -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/openssl-cmake-src/include -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/libdatachannel-src/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -fno-limit-debug-info  -fPIC -std=gnu++17 -MD -MT CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o -MF CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o.d -o CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o -c /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/cpp/native-lib.cpp
C/C++: /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/cpp/native-lib.cpp:410:14: error: no member named 'setP2PSender' in 'CipherMesh::Core::Vault'
C/C++:   410 |     g_vault->setP2PSender([](std::string userId, std::string msg) {
C/C++:       |     ~~~~~~~~~^
C/C++: 1 error generated.

> Task :app:processDebugManifestForPackage

[Incubating] Problems report is available at: file:///home/amogh/Projects/CipherMesh/src/mobile/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:buildCMakeDebug[arm64-v8a]'.
> com.android.ide.common.process.ProcessException: ninja: Entering directory `/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a'
  [1/2] Building CXX object CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o
  FAILED: CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o 
  /home/amogh/Android/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++ --target=aarch64-none-linux-android24 --sysroot=/home/amogh/Android/Sdk/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/sysroot -DRTC_ENABLE_MEDIA=0 -DRTC_ENABLE_WEBSOCKET=1 -DRTC_STATIC -Dciphermesh_jni_EXPORTS -I/home/amogh/Projects/CipherMesh/src/core -I/home/amogh/Projects/CipherMesh/src/p2p -I/home/amogh/Projects/CipherMesh/src/p2p_webrtc -I/home/amogh/Projects/CipherMesh/src/utils -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/sodium-src/libsodium/src/libsodium/include -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/openssl-cmake-src/include -I/home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a/_deps/libdatachannel-src/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -std=c++17 -fno-limit-debug-info  -fPIC -std=gnu++17 -MD -MT CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o -MF CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o.d -o CMakeFiles/ciphermesh_jni.dir/src/mobile/app/src/main/cpp/native-lib.cpp.o -c /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/cpp/native-lib.cpp
  /home/amogh/Projects/CipherMesh/src/mobile/app/src/main/cpp/native-lib.cpp:410:14: error: no member named 'setP2PSender' in 'CipherMesh::Core::Vault'
    410 |     g_vault->setP2PSender([](std::string userId, std::string msg) {
        |     ~~~~~~~~~^
  1 error generated.
  ninja: build stopped: subcommand failed.
  
  C++ build system [build] failed while executing:
      /home/amogh/Android/Sdk/cmake/3.22.1/bin/ninja \
        -C \
        /home/amogh/Projects/CipherMesh/src/mobile/app/.cxx/Debug/q3g2224w/arm64-v8a \
        ciphermesh_jni
    from /home/amogh/Projects/CipherMesh/src/mobile/app

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
24 actionable tasks: 6 executed, 18 up-to-date
